--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,26 +20,38 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".eventpackage.automobile"
-            android:parentActivityName=".event"/>
-        <activity android:name=".eventpackage.computer"
-            android:parentActivityName=".event"/>
-        <activity android:name=".eventpackage.civil"
-            android:parentActivityName=".event"/>
-        <activity android:name=".eventpackage.entc"
-            android:parentActivityName=".event"/>
-        <activity android:name=".eventpackage.instru"
-            android:parentActivityName=".event"/>
-        <activity android:name=".eventpackage.mechanical"
-            android:parentActivityName=".event"/>
-        <activity android:name=".other.co_ordinator"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".other.gallary"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".communication.contact"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".event"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".event"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".eventpackage.automobile"
+            android:parentActivityName=".event" />
+        <activity
+            android:name=".eventpackage.computer"
+            android:parentActivityName=".event" />
+        <activity
+            android:name=".eventpackage.civil"
+            android:parentActivityName=".event" />
+        <activity
+            android:name=".eventpackage.entc"
+            android:parentActivityName=".event" />
+        <activity
+            android:name=".eventpackage.instru"
+            android:parentActivityName=".event" />
+        <activity
+            android:name=".eventpackage.mechanical"
+            android:parentActivityName=".event" />
+        <activity
+            android:name=".other.co_ordinator"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".other.gallary"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".communication.contact"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".collapse" />
+        <activity android:name=".allevent.GameActivity"></activity>
     </application>
 
 </manifest>
