--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,11 @@
         <activity android:name=".allevent.MechGame" />
         <activity android:name=".other.gcoearaActivity" />
         <activity android:name=".timetablepackage.TimetableActivity" />
+        <activity android:name=".communication.AllContact" />
+        <activity android:name=".communication.AllContactList" />
+        <activity android:name=".communication.AllContactList2" />
+        <activity android:name=".communication.AllContactList3" />
+        <activity android:name=".communication.AllContactList4"></activity>
     </application>
 
 </manifest>
