--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,8 @@
         <activity android:name=".communication.AllContactList" />
         <activity android:name=".communication.AllContactList2" />
         <activity android:name=".communication.AllContactList3" />
-        <activity android:name=".communication.AllContactList4"></activity>
+        <activity android:name=".communication.AllContactList4" />
+        <activity android:name=".communication.WorkshopActivity"></activity>
     </application>
 
 </manifest>
