--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,8 @@
         <activity android:name=".communication.AllContactList2" />
         <activity android:name=".communication.AllContactList3" />
         <activity android:name=".communication.AllContactList4" />
+        <activity android:name=".communication.AllContactList5" />
+        <activity android:name=".communication.AllContactList6" />
         <activity android:name=".communication.WorkshopActivity"></activity>
     </application>
 
