--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
         applicationId "com.official19.ajb.abinitio"
         minSdkVersion 21
         targetSdkVersion 28
-        versionName "1.1"
+        versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        versionCode 2
+        versionCode 3
     }
     buildTypes {
         release {
@@ -37,6 +37,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     compile 'org.jsoup:jsoup:1.10.3'
     implementation 'com.google.firebase:firebase-database:16.0.1'
-    implementation 'com.google.firebase:firebase-messaging:17.3.0'
+    compile 'com.google.firebase:firebase-messaging:17.3.0'
 }
 apply plugin: 'com.google.gms.google-services'
